antes de recargar los archivos generados por bootfy